[gd_scene load_steps=20 format=4 uid="uid://coh2vckrltr3m"]

[ext_resource type="Script" uid="uid://c4uwlsg8hcqby" path="res://scenes and scripts/main_level.gd" id="1_7uy0x"]
[ext_resource type="Texture2D" uid="uid://cn3p1sc12bx3s" path="res://textures/background.png" id="2_bh41g"]
[ext_resource type="FontFile" uid="uid://cf352p5mp6hqa" path="res://textures/rainyhearts.ttf" id="2_qs65k"]
[ext_resource type="Shader" uid="uid://cblve6ddkm6bm" path="res://textures/post_processing_crt.gdshader" id="3_kw6mi"]
[ext_resource type="PackedScene" uid="uid://c7xgqk82c5plr" path="res://scenes and scripts/spaceship.tscn" id="3_nniuw"]
[ext_resource type="PackedScene" uid="uid://c7a28vrvssicp" path="res://scenes and scripts/alien1.tscn" id="4_1cdnk"]
[ext_resource type="PackedScene" uid="uid://c8thaxsyki1fn" path="res://scenes and scripts/alien_2.tscn" id="5_8odcg"]
[ext_resource type="PackedScene" uid="uid://dsj6q2xayjw5r" path="res://scenes and scripts/alien_3.tscn" id="7_onh3a"]
[ext_resource type="AudioStream" uid="uid://eeaeq1nqcwn6" path="res://audio/win.wav" id="8_gj4a2"]
[ext_resource type="PackedScene" uid="uid://d2ic38ytq5oq2" path="res://scenes and scripts/bunker.tscn" id="8_q8c40"]
[ext_resource type="AudioStream" uid="uid://75q5281bt6tu" path="res://audio/player_death.wav" id="9_vmw7r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2hv35"]
shader = ExtResource("3_kw6mi")
shader_parameter/res = Vector2(1400, 1000)
shader_parameter/mask_type = 0
shader_parameter/bloom_type = 0
shader_parameter/hardScan = -8.0
shader_parameter/hardPix = -2.0
shader_parameter/hardBloomScan = -2.0
shader_parameter/hardBloomPix = -1.5
shader_parameter/bloomAmount = 16.0
shader_parameter/warp = Vector2(64, 24)
shader_parameter/maskDark = 0.5
shader_parameter/maskLight = 1.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwg40"]
size = Vector2(7, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_keuhs"]
size = Vector2(13, 800)

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_q02f2"]
scenes/1/scene = ExtResource("4_1cdnk")
scenes/2/scene = ExtResource("5_8odcg")
scenes/3/scene = ExtResource("7_onh3a")

[sub_resource type="TileSet" id="TileSet_mkjb4"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetScenesCollectionSource_q02f2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ygu32"]
size = Vector2(1136, 31)

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_j734v"]
scenes/1/scene = ExtResource("8_q8c40")

[sub_resource type="TileSet" id="TileSet_mi47m"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetScenesCollectionSource_j734v")

[node name="main_level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uy0x")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="score" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -83.0
offset_right = 46.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_qs65k")
theme_override_font_sizes/font_size = 100
text = "0"
justification_flags = 161

[node name="lives" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -83.0
offset_right = -7.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_qs65k")
theme_override_font_sizes/font_size = 100
text = "3"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_2hv35")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bh41g")

[node name="Spaceship" parent="." instance=ExtResource("3_nniuw")]
position = Vector2(583, 805)

[node name="LeftWall" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-4.5, 800)
shape = SubResource("RectangleShape2D_qwg40")

[node name="EnemyDetector" type="Area2D" parent="LeftWall"]
position = Vector2(4, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall/EnemyDetector"]
position = Vector2(-10.5, 393)
shape = SubResource("RectangleShape2D_keuhs")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(1160, 0)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(-4.5, 800)
shape = SubResource("RectangleShape2D_qwg40")

[node name="EnemyDetector" type="Area2D" parent="RightWall"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall/EnemyDetector"]
position = Vector2(-1.5, 393)
shape = SubResource("RectangleShape2D_keuhs")

[node name="TileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAPAAIAAAAAAAAAAQAOAAIAAAAAAAAAAQANAAIAAAAAAAAAAQAMAAIAAAAAAAAAAQALAAIAAAAAAAAAAQAKAAIAAAAAAAAAAQAJAAIAAAAAAAAAAQAIAAIAAAAAAAAAAQAHAAIAAAAAAAAAAQAGAAIAAAAAAAAAAQAFAAIAAAAAAAAAAQAEAAIAAAAAAAAAAQADAAIAAAAAAAAAAQACAAIAAAAAAAAAAQAPAAEAAAAAAAAAAgAOAAEAAAAAAAAAAgANAAEAAAAAAAAAAgAMAAEAAAAAAAAAAgALAAEAAAAAAAAAAgAKAAEAAAAAAAAAAgAJAAEAAAAAAAAAAgAIAAEAAAAAAAAAAgAHAAEAAAAAAAAAAgAGAAEAAAAAAAAAAgAFAAEAAAAAAAAAAgAEAAEAAAAAAAAAAgADAAEAAAAAAAAAAgACAAEAAAAAAAAAAgAPAAAAAAAAAAAAAwAOAAAAAAAAAAAAAwANAAAAAAAAAAAAAwAMAAAAAAAAAAAAAwALAAAAAAAAAAAAAwAKAAAAAAAAAAAAAwAJAAAAAAAAAAAAAwAIAAAAAAAAAAAAAwAHAAAAAAAAAAAAAwAGAAAAAAAAAAAAAwAFAAAAAAAAAAAAAwAEAAAAAAAAAAAAAwADAAAAAAAAAAAAAwACAAAAAAAAAAAAAwA=")
tile_set = SubResource("TileSet_mkjb4")

[node name="DeathArea" type="Area2D" parent="."]
position = Vector2(18, 777)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(558, -56.5)
shape = SubResource("RectangleShape2D_ygu32")

[node name="win_sound" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("8_gj4a2")
volume_db = -30.0

[node name="lose_sound" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("9_vmw7r")
volume_db = -10.0

[node name="bunkers" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAARABYAAAAAAAAAAQABABYAAAAAAAAAAQADABYAAAAAAAAAAQAgABYAAAAAAAAAAQAeABYAAAAAAAAAAQA=")
tile_set = SubResource("TileSet_mi47m")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="LeftWall/EnemyDetector" to="." method="on_LeftWall_enemy_collision"]
[connection signal="body_entered" from="RightWall/EnemyDetector" to="." method="_on_RightWall_enemy_collision"]
[connection signal="body_entered" from="DeathArea" to="." method="_on_death_area_body_entered"]
[connection signal="finished" from="win_sound" to="." method="_on_win_sound_finished"]
[connection signal="finished" from="lose_sound" to="." method="_on_lose_sound_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_ufo_timer_timeout"]
